--- a/style/Style.css
+++ b/style/Style.css
@@ -267,6 +267,136 @@ div {
         grid-row: 3/4; }
         .main .services .servicesWrap .servicesGridWrap .servicesGridWrap__div7 .s_cell_img {
           background-image: url("../img/s_07.svg"); }
+  .main .preset .presetWrap {
+    max-width: 75rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1.5fr 4fr 0.5fr; }
+    .main .preset .presetWrap .presetIntroWrap {
+      grid-column: 1/4;
+      grid-row: 1/2;
+      width: 37rem;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 0.5fr auto auto auto; }
+      .main .preset .presetWrap .presetIntroWrap .presetIntroWrap__wave {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        display: inline-block;
+        height: 1.2rem;
+        background-image: url("../img/wawe.svg");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center; }
+      .main .preset .presetWrap .presetIntroWrap .presetIntroWrap__h3 {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        font-family: 'Source Serif Pro', serif;
+        font-size: 2rem;
+        line-height: 0.4rem;
+        text-align: center; }
+      .main .preset .presetWrap .presetIntroWrap .presetIntroWrap__p {
+        grid-column: 1/2;
+        grid-row: 4/5;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1rem; }
+    .main .preset .presetWrap .presetGridWrap {
+      grid-row: 2/3;
+      grid-column: 1/4;
+      margin: o auto;
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr; }
+      .main .preset .presetWrap .presetGridWrap .p_cell {
+        width: 23.6rem;
+        height: 27.4rem;
+        border-radius: 1rem;
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+        background-color: #FFFFFF; }
+      .main .preset .presetWrap .presetGridWrap .img_pr_cell {
+        width: 100%;
+        height: 15.8rem;
+        display: block;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center; }
+      .main .preset .presetWrap .presetGridWrap .h4_pr_cell {
+        font-family: 'Source Serif Pro', serif;
+        font-size: 1.5rem;
+        line-height: 1.8rem; }
+      .main .preset .presetWrap .presetGridWrap .pr_cell_p {
+        font-family: 'Roboto', sans-serif;
+        font-size: 1rem;
+        line-height: 1.4; }
+      .main .preset .presetWrap .presetGridWrap .presetGridWrap__div1 {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        justify-self: center; }
+        .main .preset .presetWrap .presetGridWrap .presetGridWrap__div1 .img_pr_cell {
+          background-image: url("../img/preset_01.png"); }
+      .main .preset .presetWrap .presetGridWrap .presetGridWrap__div2 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        justify-self: center; }
+        .main .preset .presetWrap .presetGridWrap .presetGridWrap__div2 .img_pr_cell {
+          background-image: url("../img/preset_02.png"); }
+      .main .preset .presetWrap .presetGridWrap .presetGridWrap__div3 {
+        grid-column: 3/4;
+        grid-row: 1/2;
+        justify-self: center; }
+        .main .preset .presetWrap .presetGridWrap .presetGridWrap__div3 .img_pr_cell {
+          background-image: url("../img/preset_03.png"); }
+    .main .preset .presetWrap .presetLinkWrap {
+      grid-row: 3/4;
+      grid-column: 1/4;
+      margin: 0 auto; }
+      .main .preset .presetWrap .presetLinkWrap .presetLinkWrap_span {
+        width: 7.3rem;
+        height: 1.5rem; }
+      .main .preset .presetWrap .presetLinkWrap .preset__btn {
+        line-height: 1.5rem; }
+      .main .preset .presetWrap .presetLinkWrap .preset__btn::after {
+        content: "";
+        display: inline-block;
+        background-image: url("../img/arrow_a.svg");
+        width: 1.2rem;
+        height: 0.6rem;
+        background-size: cover;
+        margin-left: 0.2rem; }
+  .main .contact .contactWrap {
+    max-width: 50rem;
+    max-height: 16.2rem;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr;
+    align-content: center; }
+    .main .contact .contactWrap .contactWrap__paragraph {
+      grid-column: 1/2;
+      grid-row: 1/2;
+      font-size: 1.75rem;
+      justify-self: center; }
+      .main .contact .contactWrap .contactWrap__paragraph .contactWrap__paragraph_p {
+        width: 19.6rem; }
+    .main .contact .contactWrap .contactWrap__btn_a {
+      grid-column: 2/3;
+      grid-row: 1/2;
+      align-self: center;
+      width: 7.8rem;
+      height: 3.6rem;
+      border-radius: 6px;
+      background-color: #3A5F56;
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: center;
+      align-items: center; }
+      .main .contact .contactWrap .contactWrap__btn_a .contactWrap__btn {
+        width: 4.7rem;
+        height: 1.7rem;
+        color: #FFFFFF;
+        font-size: 1.2rem; }
 
 .footer {
   grid-column: 1/4;
