--- a/style/Style.scss
+++ b/style/Style.scss
@@ -324,6 +324,167 @@ div {
             }
         }
     }
+    .preset {
+        .presetWrap{
+            max-width: 75rem;
+            margin: 0 auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1.5fr 4fr 0.5fr;
+            .presetIntroWrap {
+                grid-column: 1/4;
+                grid-row: 1/2;
+                width: 37rem;
+                margin: 0 auto;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 0.5fr auto auto auto;
+                .presetIntroWrap__wave {
+                    grid-column: 1/2;
+                    grid-row: 2/3;
+                    display: inline-block;
+                    height: 1.2rem;
+                    background-image: url('../img/wawe.svg');
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+                .presetIntroWrap__h3 {
+                    grid-column: 1/2;
+                    grid-row: 3/4;
+                    font-family: 'Source Serif Pro', serif;
+                    font-size: 2rem;
+                    line-height: 0.4rem;
+                    text-align: center;
+                }
+                .presetIntroWrap__p {
+                    grid-column: 1/2;
+                    grid-row: 4/5;
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 1rem;
+                }
+            }
+            .presetGridWrap {
+                grid-row: 2/3;
+                grid-column: 1/4;
+                margin: o auto;
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-template-rows: 1fr;
+                .p_cell {
+                    width: 23.6rem;
+                    height: 27.4rem;
+                    border-radius: 1rem;
+                    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+                    background-color: #FFFFFF;
+                }
+                .img_pr_cell {
+                    width: 100%;
+                    height: 15.8rem;
+                    display: block;
+                    background-size: contain;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+                .h4_pr_cell {
+                    font-family: 'Source Serif Pro', serif;
+                    font-size: 1.5rem;
+                    line-height: 1.8rem;
+                }
+                .pr_cell_p {
+                    font-family: 'Roboto', sans-serif;
+                    font-size: 1rem;
+                    line-height: 1.4;
+                }
+
+                .presetGridWrap__div1 {
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+                    justify-self: center;
+                    .img_pr_cell {
+                        background-image: url('../img/preset_01.png');
+                    }
+                }
+                .presetGridWrap__div2 {
+                    grid-column: 2/3;
+                    grid-row: 1/2;
+                    justify-self: center;
+                    .img_pr_cell {
+                        background-image: url('../img/preset_02.png');
+                    }
+                }
+                .presetGridWrap__div3 {
+                    grid-column: 3/4;
+                    grid-row: 1/2;
+                    justify-self: center;
+                    .img_pr_cell {
+                        background-image: url('../img/preset_03.png');
+                    }
+                }
+            }
+            .presetLinkWrap {
+                grid-row: 3/4;
+                grid-column: 1/4;
+                margin: 0 auto;
+                .presetLinkWrap_span {
+                    width: 7.3rem;
+                    height: 1.5rem;
+                }
+                .preset__btn {
+                    line-height: 1.5rem;
+                }
+                .preset__btn::after {
+                    content: "";
+                       display: inline-block;
+                       background-image: url('../img/arrow_a.svg');
+                       width: 1.2rem;
+                       height: 0.6rem;
+                       background-size: cover;
+                       margin-left: 0.2rem; 
+                }
+
+            }
+        }
+    }
+    .contact {
+        .contactWrap {
+        max-width: 50rem;
+        max-height: 16.2rem;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 3fr 1fr;
+        grid-template-rows: 1fr;
+        align-content: center;
+        .contactWrap__paragraph {
+            grid-column: 1/2;
+            grid-row: 1/2;
+            font-size: 1.75rem;
+            justify-self: center;
+            .contactWrap__paragraph_p {
+                width: 19.6rem;
+            }
+        }
+        .contactWrap__btn_a {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            align-self: center;
+            width: 7.8rem;
+            height: 3.6rem;
+            border-radius: 6px;
+            background-color: #3A5F56;
+            display: flex;
+            flex-flow: row nowrap;
+            justify-content: center;
+            align-items: center;
+            .contactWrap__btn {
+                width: 4.7rem;
+                height: 1.7rem;
+                color: #FFFFFF;
+                font-size: 1.2rem;
+            }
+        }
+        }
+    }
    
 }
 .footer {
